# build198x

./: .gitattributes  .gitignore  Cargo.toml  README.md  clippy.toml  release-plz.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release-plz.yml
crates/build198x/: CHANGELOG.md  Cargo.toml
crates/build198x-adf/: CHANGELOG.md  Cargo.toml  README.md
crates/build198x-adf/src/: main.rs
crates/build198x/examples/: gen_smoke_source.rs
crates/build198x/src/: lib.rs  main.rs
crates/build198x/src/beeper/: asm.rs  mod.rs  notation.rs  wav.rs
crates/build198x/src/convert/: colour.rs  constrain.rs  dither.rs  mod.rs  normalise.rs  pipeline.rs  quantise.rs  resize.rs
crates/build198x/src/format/: adf.rs  art_studio.rs  ilbm.rs  koala.rs  mod.rs  scr.rs
crates/build198x/tests/: art_studio.rs  beeper_calibration.rs  cli.rs  convert_amiga.rs  convert_cells.rs  convert_no_transcendentals.rs  convert_normalise.rs  convert_pipeline.rs  convert_resize.rs  emu_smoke_goldens.rs  ilbm.rs  koala.rs  netpbm.rs  scr.rs  wild.rs
crates/build198x/tests/common/: mod.rs
crates/build198x/tests/fixtures/: gloaming-phrases.bpr
crates/build198x/tests/fixtures/emu-smoke/: SHA256SUMS  report-art-studio.json  report-ilbm.json  report-koala.json  report-scr.json  smoke.art  smoke.iff  smoke.koa  smoke.scr
crates/build198x/tests/fixtures/golden/: cli-report.json  pattern-byterun1.iff  pattern-uncompressed.iff  pattern.art  pattern.koa  pattern.scr
crates/format-commodore-amiga-adf/: Cargo.toml  README.md
crates/format-commodore-amiga-adf/examples/: multi_file_disk.rs
crates/format-commodore-amiga-adf/src/: lib.rs
crates/mediaspec/: CHANGELOG.md  Cargo.toml
crates/mediaspec/src/: commodore_amiga_ocs.rs  commodore_c64.rs  lib.rs  sinclair_zx_spectrum.rs
crates/mediaspec/tests/: consistency.rs  source_facts.rs
decisions/: demand-gate-adf-master.md  demand-gate-beeper-phrases.md  demand-gate-opening.md  demand-gate-tape-master.md  determinism-contract.md  module-and-crate-naming.md  play198x-boundary.md  validation-tiers.md
docs/specs/: 2026-07-10-adf-create-verb.md  2026-07-10-adf-read-verbs.md
scripts/: coverage-gate.sh  coverage.sh  regen-emu-fixtures.sh
