# build198x-adf — the standalone Amiga ADF tool. A lean binary over the
# format-commodore-amiga-adf library: ADF-only users install this instead of
# the whole build198x pipeline (no image/mediaspec deps). The `build198x adf`
# subcommand is the same operation inside the pipeline tool; this is its
# standalone twin.
[package]
name = "build198x-adf"
description = "Master a Kickstart-1.x hunk executable into a bootable Amiga ADF floppy — the standalone ADF tool."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["amiga", "adf", "floppy", "ofs", "ffs"]
categories = ["command-line-utilities", "filesystem", "emulators"]

[dependencies]
# The ADF library now lives in the format198x org; consumed from crates.io.
format-commodore-amiga-adf = "0.2.0"

[lints]
workspace = true
