[package]
name = "build198x"
description = "The 198x family's build-tools pipeline — asset conversion, data packing, and media mastering for retro targets."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# Lib + bin crate: the library carries the format codec modules (src/format/,
# per decisions/module-and-crate-naming.md, dependency-free by convention)
# and the conversion pipeline (src/convert/, which may depend on mediaspec
# and image); the binary stays a minimal stub until the CLI unit
# (subcommands, pipeline wiring).

[dependencies]
# The version requirement rides alongside the path (Asm198x's pattern for
# its isa crates): release-plz's cargo-package step refuses a bare path dep,
# and it bumps this requirement in lockstep on each release.
mediaspec = { path = "../mediaspec", version = "0.2.1" }
# The Amiga ADF disk-image library — now its own crate in the format198x org
# (github.com/format198x/format198x), consumed here from crates.io like any
# external user. The `adf` subcommand delegates to it.
format-commodore-amiga-adf = "0.2.0"
# Decode + DynamicImage only. default-features = false keeps the decoder set
# explicit (PNG is the byte-identical contract; JPEG/GIF are accepted
# best-effort — decisions/determinism-contract.md) and keeps `rayon` out:
# no parallel paths anywhere near the contracted pixel passes.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }

[lints]
workspace = true
