# The Amiga ADF disk-image library — the family's from-scratch OFS/FFS writer
# (and, in progress, reader). Extracted from build198x's format::adf once an
# external audience became the split-triggering real consumer
# (../../decisions/module-and-crate-naming.md). Dependency-free (core/std
# only), deterministic, GPL-2.0-or-later. Consumed by build198x today; a
# candidate for Emu198x's floppy read path and for crates.io once the read
# side lands.
[package]
name = "format-commodore-amiga-adf"
description = "Deterministic, dependency-free Amiga ADF (OFS/FFS) disk images — read, write, and verify bootable floppies."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["amiga", "adf", "ofs", "ffs", "disk-image"]
categories = ["filesystem", "encoding", "emulators"]

[lints]
workspace = true
